edited our 'picture' code due to file name change

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
   <!--image-->
   <p>stole ninas photo because I didn't want to link my own lol whoops</p>
   <!--INSTR: See my other note about Pictures!-->
-  <img src="Pictures/K.K Pit.jpg" alt ="My brain cells when K.K comes to the island" width="300">
+  <img src="pictures/K.K Pit.jpg" alt ="My brain cells when K.K comes to the island" width="300">
 <!-- This is where Nina's work starts. :) -->
  
 <hr> 
@@ -186,7 +186,7 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
     <strong>Here, have a meme for your troubles!</strong>
     <br>
     <!--INSTR: I see that the folder is named Pictures! Please rename it lowercase pictures without an exclamation mark. It's probably causing some errors for you all...-->
-    <img src="Pictures!/K.K Pit.jpg" alt ="My brain cells when K.K comes to the island" width="300">
+    <img src="pictures/K.K Pit.jpg" alt ="My brain cells when K.K comes to the island" width="300">
 
 </div>
 
@@ -208,10 +208,10 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
 <!--Applying manipulation to images. :)-->
 <div class="row">
     <div class="column">
-      <img src="Pictures!/productive.png" alt="Me when I wake up" style="width:100%">
+      <img src="pictures/productive.png" alt="Me when I wake up" style="width:100%">
     </div>
     <div class="column">
-      <img src="Pictures!/nah.png" alt="Me 20 minutes later" style="width:100%">
+      <img src="pictures/nah.png" alt="Me 20 minutes later" style="width:100%">
     </div>
 </div>
 
@@ -280,7 +280,7 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
 </div>
 
 <!--img-->
- <img src="Pictures!/iStock-155097702-1030x684.jpg" alt ="chocolet" width="300">
+ <img src="pictures/iStock-155097702-1030x684.jpg" alt ="chocolet" width="300">
 
 
 
@@ -336,7 +336,7 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
 
    
  <!--img-->
- <img src="Pictures!/seasons.png" alt ="Seasons" width="300">
+ <img src="pictures/seasons.png" alt ="Seasons" width="300">
    
     
     
