--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <html>
 
 <head>
+
+ <!-- Required meta tags -->
+ <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ 
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
 <!--Nina: added <link rel="" and <style> to h1 in <head> tag; please feel free to edit if you want! :) 
     I added Rina's <link rel="" to the top. -->
 <link rel="stylesheet" href = "styles.css"> 
+
 <style> 
 /*Nina: "Specific Tag" requirement = please feel free to edit/add more to the page. uwu 
  Trevor: style tag added to h2 and #myheader
@@ -512,6 +521,13 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
 <!--Adding link and hover/visibilty changes  -->
 <p>Enjoyed the pictures? Learn fun facts about The Office!</p>
 <a href="https://www.youtube.com/watch?v=3nxuoXuKkuc">Click here for YouTube video!</a>
+
+  <!-- Optional JavaScript -->
+   
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 </body>
 </html>
