--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
     <em>Tragic, no? I could have been loving pink my whole life.</em></p> 
 
     <!--Added <table> :: about ...rad..ness? idk. -->
-    <div> 
+    <div class="container">  
         <strong style="color:#ff99cc">Table time! ~ <br></strong><br>
 
         <table style="width:20%">
