still testing containers. :)

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
     <em>Tragic, no? I could have been loving pink my whole life.</em></p> 
 
     <!--Added <table> :: about ...rad..ness? idk. -->
-    <div class="container">  
-        <strong style="color:#ff99cc">Table time! ~ <br></strong><br>
+    <div class="container p-3 my-3 border">  
+       <strong style="color:#ff99cc">Table time! ~ <br></strong><br>
 
         <table style="width:20%">
         <tr>
