--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- This is where Trevor's work starts. :) -->
+
 <!DOCTYPE html>
 <html>
 
@@ -10,6 +10,7 @@
  
 <!--Nina: Bootstrap CSS + JS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -17,15 +18,17 @@
 <!-- End Bootstrap Essentials -->
 
 <!--Nina: added <link rel="" and <style> to h1 in <head> tag; please feel free to edit if you want! :) 
-    I added Rina's <link rel="" to the top. -->
+I added Rina's <link rel="" to the top. -->
 <link rel="stylesheet" href = "styles.css"> 
 
 <style> 
 /*Nina: "Specific Tag" requirement = please feel free to edit/add more to the page. uwu 
+
  Trevor: style tag added to h2 and #myheader
  Trevor: added text manipulation, position and alignment of elements and hover tag */
 
 body{
+    /*Nina: Made our background look like space! Thought it would give our .row some more flavor. Feel free to remove. :) */
     background-image: url(https://images.pexels.com/photos/956999/milky-way-starry-sky-night-sky-star-956999.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
 }
 h1 {color:#cc0099} 
@@ -50,11 +53,38 @@ h2.intro:hover {
     padding: 10px;
     color:#000;}
 
-</style>   
-<title>Xcom for 10 dollars? nah</title>
+</style>
+<!--Nina: A cheeky title edit, because it's my repository now! Wehehehe.-->
+<title>AC:NH for 60 dollars? yeah</title>
 </head>
 
+
 <body>
+<!--Nina: Added a navigation bar! :) -->
+    <!--Took this class from Mark's sample page, because I liked it!-->
+<nav class="pl-md-5 navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+    <!-- Nina: Bootstrap - Little Title Heading! Wow!!! -->
+    <a class="navbar-brand" href="https://lycheefuzz.github.io/">Team 8's Bootstrap page!</a>
+
+    <!-- Links -->
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <!--Nina: added a link to the navigation bar!-->
+        <a class="nav-link" href="https://youtu.be/zMtj4yJKuzk">a smooch    !</a>
+      </li>
+      <!--Nina: Empty Link -- Feel free to add -->
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link 2</a>
+      </li>
+        <!--Nina: Empty Link -- Feel free to add -->
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link 3</a>
+      </li>
+    </ul>
+  
+  </nav>
+
+<!-- This is where Trevor's work starts. :) -->
 <!--headings
 Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
 <h1>My First Heading</h1>
@@ -98,10 +128,11 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
   <p>stole ninas photo because I didn't want to link my own lol whoops</p>
   <!--INSTR: See my other note about Pictures!-->
   <img src="pictures/K.K Pit.jpg" alt ="My brain cells when K.K comes to the island" width="300">
-<!-- This is where Nina's work starts. :) -->
- 
-<hr> 
 
+
+
+
+<!-- This is where Nina's work starts. :) -->
     <style>
      /*CSS Practice: Where I made all of my classes!*/ 
     /* Added ID! */
@@ -125,7 +156,7 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
     
     /* Added link manipulation */ 
     a:link{
-        color:#9966ff;
+        color:lavender;
     }
     a:hover{ 
         color:black;
@@ -141,23 +172,26 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
         padding: 5px;
     }
 
-    .row::after {
+    /*.row::after {
         content: "";
         clear: both;
         display: table;
-    }   
+    } */
     </style>
 
-    <div class="container-fluid text-white" style="margin-top:70px">
+ <!--Bootstrap: Added a container! :) -->
+ <div class="container text-white" style="margin-top:70px">
 
+    <!--Makin' pretty boxes. :)-->
         <div class="row">
          <div class="col">
+
     <!--Added headings! <h1> and <h2>-->
-    <h1>Nina's first heading.</h1>
+    <h1 style="color:#ff99cc">Nina's first heading.</h1>
     <p>Woah! look at that. My first paragraph!</p>
 
     <!--Added color and !! <style> attribute :) !!-->
-    <h2 style="color:#ff99cc">And my second heading has color!</h2>
+    <h2 style="color:#ff99cc">And my second heading!</h2>
     <p>ain't she cute? ^^ We learning.</p>
 
 
@@ -167,15 +201,15 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
     <em>Tragic, no? I could have been loving pink my whole life.</em></p> 
 
     </div>
-    </div>
+</div>
 
     <!--Added <table> :: about ...rad..ness? idk. -->
         <div class="row">
         <div class="col">
 
-        <strong style="color:#ff99cc">Table time! ~ <br></strong><br>
+        <h2 style="color:#ff99cc">Table time! ~ </h2>
 
-        <table style="width:20%">
+       <br><table style="width:20%">
         <tr>
             <th>Woah!</th>
             <th>Rad!</th>
@@ -189,10 +223,12 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
         </table>
         <br><p style="color: #ff99cc;"><em>Table time over!</em> I enjoyed that!</p>
 
-        </div>
-        </div>
+     </div>
+</div>
 
     <!--Added lists! <ol> and <ul> :: About Video Games.-->
+        <div class="row"> 
+        <div class="column">
     <strong>Next: Here is a list of some of my favorite video games.</strong><br>
 <ul>
     <li>Animal Crossing</li>
@@ -202,7 +238,8 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
     <li>The Rhythm Heaven Series</li>
 </ul>
 
-
+</div>
+<div class="column">
 
     <strong>Okay, now I will rank them from best to worst!</strong>
 <ol>
@@ -210,52 +247,80 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
     <li>Just kidding.</li>
     <li>This is too difficult for me. :(</li>
 </ol>
-
-
-<hr>
-<!--Added <img> :: About openin' up that dang pit. !! Also played with text-align/position + font-size. !! -->
-<div style="text-align:center;">
-    <p style="font-size:60px">Thank you for reading all of this! I am happy to announce that I gained one (1) new brain cell!</p>
-    <br> 
-    <strong>Here, have a meme for your troubles!</strong>
-    <br>
-    <!--INSTR: I see that the folder is named Pictures! Please rename it lowercase pictures without an exclamation mark. It's probably causing some errors for you all...-->
-    <img src="pictures/K.K Pit.jpg" alt ="My brain cells when K.K comes to the island" width="300">
-
+    </div>
 </div>
 
-<!--Yo! This is where Nina's main CSS practice starts.-->
+
+<!--Yo! This is where Nina's main CSS practice starts. 
+Edit (May 13, 2020): I removed some things for ~ aesthetic ~'s sake -->
 
 <!--Applying style made in #style.css + text manipulation :)-->
-<hr> 
-<br><h7>Now let's get CSS practice in here, yes,yes?</h7>
-<h6><del>no, no!</del> Yes,yes!</h6> 
 
-<!--Applied #NinaHeader ID. :) -->
-<h1 id="NinaHeader"> Woah! We have custom headers now. Don't that just be neat.</h1>
+<div class="row">
 
-<!--Applying my .classes :)-->
-<h2 class="NinaClass"> What have I been doing while in quarantine?</h2>
-<p class="NinaWantsMandatedColor"> UUUUUUhhhh.... eating, sleeping, playing video games, singing, ..... nothing new.</p>
+<h2 style="color:#ff99cc"> Me, during the entirety of this quarantine</h2>
 
-<br><p> But, the best way to describe what I've been like during quarantine is with pictures!</p>
-<!--Applying manipulation to images. :)-->
+<!--CSS: Applying manipulation to images. :)-->
 <div class="row">
     <div class="column">
       <img src="pictures/productive.png" alt="Me when I wake up" style="width:100%">
     </div>
     <div class="column">
       <img src="pictures/nah.png" alt="Me 20 minutes later" style="width:100%">
-    </div>
+    
+</div>
+</div>
 </div>
 
-<!--Added a link :) + added hover/visibilty changes. :)  -->
+<!--Bootstrap: Buttons! :)-->
+<div class="row">
+<div class="col">
+<h1 style="color:#ff99cc">Buttons! Wow!</h1>
+<p>I have a lot of random, really cursed + rare YouTube videos. Now is my time to use them.</p>
+
+<a href="https://youtu.be/m5qXMrAd_G4" class="btn btn-dark" role="button">quarantine hair</a>
+<a href="https://youtu.be/s7Ynyb4l7oM" class="btn btn-dark" role="button">quarantine driving</a>
+<a href="https://youtu.be/Ry5URU-Py2Q" class="btn btn-dark" role="button">quarantine politics</a>
+<a href="https://youtu.be/ZoakPxzqbH0" class="btn btn-dark" role="button">quarantine food</a>
+<a href="https://youtu.be/SBeYzoQPbu8" class="btn btn-dark" role="button">quarantine brain cells</a>
+</div>
+</div>
+
+<!--CSS: Added a link :) + added hover/visibilty changes. :)  -->
+<div class="row">
+<div class="col">
 <a href="https://twitter.com/lycheefuzz"> Also, follow me on twitter. uwu</a>
+        </div>
+        </div>
 
-<!--Thank you message. :)-->
-<p style="color:violet">Thank you! See you soon! ~ Nina P. :3</p>
+<!--A Bootstrap Media Thank you message. :)-->
+    <div class="media border p-3 bg-white">
+    <img src="pictures/nah.png" alt="Nina P." class="mr-3 mt-3 rounded-circle" style="width:60px;">
+    <div class="media-body">
+      <h4 style="color:black">Nina P. <small><i>Posted on May 13, 2020</i></small></h4>
+      <p style="color:violet">Thank you! See you soon! ~ Nina P. :3</p>
+    </div>
+  </div>
+
+
 
 </div>
+
+<!-- ~~ Dedided to leave this out of the Bootstrap page. Again, for ~aesthetic~'s sake. 
+But, I'm sentimental. So, I'm keeping it in here.-->
+
+   <!-- Added <img> :: About openin' up that dang pit. !! Also played with text-align/position + font-size. !! -->
+    <!-- <div style="text-align:center;">
+    <p style="font-size:60px">Thank you for reading all of this! I am happy to announce that I gained one (1) new brain cell!</p>
+    <br> 
+    <strong>Here, have a meme for your troubles!</strong>
+    <br> --> 
+    <!--INSTR: I see that the folder is named Pictures! Please rename it lowercase pictures without an exclamation mark. It's probably causing some errors for you all...-->
+   
+   <!-- <img src="pictures/K.K Pit.jpg" alt ="My brain cells when K.K comes to the island" width="300">
+
+    </div> --> 
+
 
 <!--And this is where Nina's work ends. :)-->
 
