Added some more bootstrap stuffs.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
 
 
 <!-- This is where Nina's work starts. :) -->
+
     <style>
      /*CSS Practice: Where I made all of my classes!*/ 
     /* Added ID! */
@@ -182,20 +183,20 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
  <!--Bootstrap: Added a container! :) -->
  <div class="container text-white" style="margin-top:70px">
 
-    <!--Makin' pretty boxes. :)-->
+    <!--Bootstrap (but, really it's CSS): Makin' pretty boxes. :)-->
         <div class="row">
          <div class="col">
 
-    <!--Added headings! <h1> and <h2>-->
+    <!--HTML: Added headings! <h1> and <h2>-->
     <h1 style="color:#ff99cc">Nina's first heading.</h1>
     <p>Woah! look at that. My first paragraph!</p>
 
-    <!--Added color and !! <style> attribute :) !!-->
+    <!--HTML + CSS: Added color and !! <style> attribute :) !!-->
     <h2 style="color:#ff99cc">And my second heading!</h2>
     <p>ain't she cute? ^^ We learning.</p>
 
 
-    <!--Added <span>, <strong>, <em>, and <div> :: about pink, my fave color-->
+    <!--HTML: Added <span>, <strong>, <em>, and <div> :: about pink, my fave color-->
     <p>Can you tell what my favorite<span style="color:#ff99cc"> color </span>is? Probably not.<br>
     <strong>I used to be one of those gorls who swore against pink, and now I am in love with it.</strong><br>
     <em>Tragic, no? I could have been loving pink my whole life.</em></p> 
@@ -203,7 +204,7 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
     </div>
 </div>
 
-    <!--Added <table> :: about ...rad..ness? idk. -->
+    <!--HTML: Added <table> :: about ...rad..ness? idk. -->
         <div class="row">
         <div class="col">
 
@@ -226,9 +227,9 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
      </div>
 </div>
 
-    <!--Added lists! <ol> and <ul> :: About Video Games.-->
+    <!--HTML: Added lists! <ol> and <ul> :: About Video Games.-->
         <div class="row"> 
-        <div class="column">
+        <div class="col">
     <strong>Next: Here is a list of some of my favorite video games.</strong><br>
 <ul>
     <li>Animal Crossing</li>
@@ -239,7 +240,8 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
 </ul>
 
 </div>
-<div class="column">
+<!--Bootstrap: lil' column addition. -->
+<div class="col">
 
     <strong>Okay, now I will rank them from best to worst!</strong>
 <ol>
@@ -253,8 +255,6 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
 
 <!--Yo! This is where Nina's main CSS practice starts. 
 Edit (May 13, 2020): I removed some things for ~ aesthetic ~'s sake -->
-
-<!--Applying style made in #style.css + text manipulation :)-->
 
 <div class="row">
 
@@ -270,6 +270,9 @@ Edit (May 13, 2020): I removed some things for ~ aesthetic ~'s sake -->
     
 </div>
 </div>
+
+<p>This has also been my brain. --> </p>
+<div class="spinner-border text-dark"></div>
 </div>
 
 <!--Bootstrap: Buttons! :)-->
@@ -283,6 +286,9 @@ Edit (May 13, 2020): I removed some things for ~ aesthetic ~'s sake -->
 <a href="https://youtu.be/Ry5URU-Py2Q" class="btn btn-dark" role="button">quarantine politics</a>
 <a href="https://youtu.be/ZoakPxzqbH0" class="btn btn-dark" role="button">quarantine food</a>
 <a href="https://youtu.be/SBeYzoQPbu8" class="btn btn-dark" role="button">quarantine brain cells</a>
+<a href="https://youtu.be/qVSy4O3k3u4" class="btn btn-dark" role="button">quarantine smells</a><br>
+
+<br><p>Hope you got a goof + laugh out of this, hehe!</p>
 </div>
 </div>
 
@@ -293,7 +299,7 @@ Edit (May 13, 2020): I removed some things for ~ aesthetic ~'s sake -->
         </div>
         </div>
 
-<!--A Bootstrap Media Thank you message. :)-->
+<!--Bootstrap: Media Thank you message. :)-->
     <div class="media border p-3 bg-white">
     <img src="pictures/nah.png" alt="Nina P." class="mr-3 mt-3 rounded-circle" style="width:60px;">
     <div class="media-body">
