--- a/index.html
+++ b/index.html
@@ -252,6 +252,13 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
     </div>
 </div>
 
+<!--Bootstrap: A lil' flexbox!-->
+<div class="d-flex">
+    <div class="p-2 bg-info flex-fill">We flexin' on you!</div>
+    <div class="p-2 bg-warning flex-fill">I truly have no ideas on what fun thing I should do with this.</div>
+    <div class="p-2 bg-primary flex-fill">Sorry!</div>
+  </div>
+
 
 <!--Yo! This is where Nina's main CSS practice starts. 
 Edit (May 13, 2020): I removed some things for ~ aesthetic ~'s sake -->
