Trevor did his bootstrap requirements(:

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@ h2.intro:hover {
         <!--Nina: added a link to the navigation bar!-->
         <a class="nav-link" href="https://youtu.be/zMtj4yJKuzk">a smooch    !</a>
       </li>
-      <!--Nina: Empty Link -- Feel free to add -->
+      <!--Nina: Empty Link -- Feel free to add
+      Trevor: added a link to our nav bar(: ) -->
       <li class="nav-item">
-        <a class="nav-link" href="#">Link 2</a>
+        <a class="nav-link" href="https://www.youtube.com/watch?v=BW1aX0IbZOE">okay (:</a>
       </li>
         <!--Nina: Empty Link -- Feel free to add -->
       <li class="nav-item">
@@ -85,6 +86,23 @@ h2.intro:hover {
   </nav>
 
 <!-- This is where Trevor's work starts. :) -->
+<!-- Trevor: adding my grids(:-->
+<div class="row">
+  <div class="col-sm-4">small column</div>
+  <div class="col-sm-8">like still a small column but it is bigger</div>
+</div>
+<!--Trevor: adding my flexbox! I got the base for it on w3-->
+<div class="d-flex p-3 bg-secondary text-white">
+  <div class="p-2 bg-info">Flex</div>
+  <div class="p-2 bg-warning">On</div>
+  <div class="p-2 bg-primary">The</div>
+  <div class="p-2 bg-warning">Haters</div>
+</div>
+<!--Added my jumbotron Trevor did (:-->
+<div class="jumbotron">
+  <h1>Kickflip Tutorial</h1>      
+  <p>Kickflip is the most popular Skateboarding trick for developing responsive, mobile-first projects on the web. To do a kickflip, GET GUD</p>
+</div>     
 <!--headings
 Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
 <h1>My First Heading</h1>
