fixed my grids i think?

--- a/index.html
+++ b/index.html
@@ -87,10 +87,18 @@ h2.intro:hover {
 
 <!-- This is where Trevor's work starts. :) -->
 <!-- Trevor: adding my grids(:-->
-<div class="row">
-  <div class="col-sm-4">small column</div>
-  <div class="col-sm-8">like still a small column but it is bigger</div>
-</div>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      small boy
+    </div>
+    <div class="col-6">
+      big boy
+    </div>
+    <div class="col">
+      small boy
+    </div>
+  </div>
 <!--Trevor: adding my flexbox! I got the base for it on w3-->
 <div class="d-flex p-3 bg-secondary text-white">
   <div class="p-2 bg-info">Flex</div>
