containified all my stuff(:

--- a/index.html
+++ b/index.html
@@ -107,18 +107,37 @@ h2.intro:hover {
   <div class="p-2 bg-warning">Haters</div>
 </div>
 <!--Added my jumbotron Trevor did (:-->
-<div class="jumbotron">
-  <h1>Kickflip Tutorial</h1>      
-  <p>Kickflip is the most popular Skateboarding trick for developing responsive, mobile-first projects on the web. To do a kickflip, GET GUD</p>
-</div>     
+<div class="container text-white" style="margin-top:70px">
+  <div class="jumbotron">
+    <h1>Kickflip Tutorial</h1>      
+    <p>Kickflip is the most popular Skateboarding trick for developing responsive, mobile-first projects on the web. To do a kickflip, GET GUD</p>
+  </div>  
+</div>   
 <!--headings
 Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
+<div class="container">
 <h1>My First Heading</h1>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col-6">
+      2 of 3 (wider)
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+  </div>
+</div>
+<div class="container">
 <h2 class="intro">My Second Heading</h2>
 <p id="myheader">My paragraph.</p>
+</div>
 <!--div-->
 <!-- Trevor changed div style to a different color to show use of ine line style=""-->
-<div style="background-color:red">
+<div class="container">
+  <div style="background-color:red">
     <h3>This is a red heading</h3>
     <p>and This is a red paragraph.</p>
   </div>
@@ -154,7 +173,7 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
   <p>stole ninas photo because I didn't want to link my own lol whoops</p>
   <!--INSTR: See my other note about Pictures!-->
   <img src="pictures/K.K Pit.jpg" alt ="My brain cells when K.K comes to the island" width="300">
-
+</div>
 
 
 
