--- a/index.html
+++ b/index.html
@@ -553,41 +553,46 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 
 <!-- This is where Rina's work starts. :) -->
 <hr>
+<div>
+  <!-- Headings -->
+  <h1>RINA'S FIRST HEADING</h1>
+    <p>woah so dramatic, let's tone it down with the next one</p>
+  <h2>Rina's second heading</h2>
+    <p>much better :)</p>
+</div>
 
-<!-- Headings -->
-<h1>RINA'S FIRST HEADING</h1>
-<p>woah so dramatic, let's tone it down with the next one</p>
-<h2>Rina's second heading</h2>
-<p>much better :)</p>
+<div>
+  <!-- Colors -->
+  <h3 style = "color:white" > Rina's third heading</h3>
+  <p> can you see it? prolly not cause it blends in with the background</p>
 
-<!-- Colors -->
-<h3 style = "color:white" > Rina's third heading</h3>
-<p> can you see it? prolly not cause it blends in with the background</p>
-
-<!-- Add <div> and color to the box-->
+  <!-- Add <div> and color to the box-->
     <!--INSTR: Don't forget to put "quote" marks around attribute values!-->
-<div style=background-color:black>
-<h3 style = "color:white"> Rina's fourth heading</h3>
-<p> yay! you can prolly see it now!</p>
+  <div style=background-color:black>
+  <h3 style = "color:white"> Rina's fourth heading</h3>
+    <p> yay! you can prolly see it now!</p>
+  </div>
 </div>
 
 <!-- Span -->
 
-<p>My favorite color is...
-    <!--INSTR: see above-->
+<div>
+  <p>My favorite color is...
+      <!--INSTR: see above-->
     <div style=background-color:black>
         <span style = "color:white"> white </span> 
     </div> 
-</p>
+  </p>
+
  
-<!-- Strong -->
-<p><strong>Alot of people say white is not a color and its a shade.</strong></p>
+  <!-- Strong -->
+  <p><strong>Alot of people say white is not a color and its a shade.</strong></p>
 
-<!-- Emphasized <em> -->
-<p><em>Should I have a backup favorite color?</em></p>
+  <!-- Emphasized <em> -->
+  <p><em>Should I have a backup favorite color?</em></p>
 
-<!-- Table -->
-<table style="width:30%">
+  <!-- Table -->
+  <table style="width:30%">
     <tr>
         <th>Corgi</th>
         <th>Shiba</th>
@@ -597,26 +602,27 @@ But, I'm sentimental. So, I'm keeping it in here.-->
         <td>can you decide?</td>
         <td>it will be difficult</td>
     </tr>
-</table>
+  </table>
+</div>
+
 
 <!-- Lists <ol> ordered as in with numbers list <ul> unordered as in just bullets no numbers -->
-
 <div>
-<p><strong>Let's Compare</strong></p>
+  <p><strong>Let's Compare</strong></p>
 
-<p>Corgi</p>
-<ol>
+  <p>Corgi</p>
+  <ol>
     <li>Corgis have stubby legs</li>
     <li>Corgis have cute butt</li>
     <li>Corgis have short tail</li>
-</ol>
+  </ol>
 
-<p>Shiba</p>
-<ul>
+  <p>Shiba</p>
+  <ul>
     <li>Shibas have curly tail</li>
     <li>Shibas have normal legs</li>
     <li>Shibas have fox like face</li>
-</ul>
+  </ul>
 </div>
 
 <!-- Picture-->
@@ -674,13 +680,14 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 <!--INSTR: YES! Classes for categories of elements that you want to lump together and style. IDs for unique elements that you need to refer to or treat special. Later, in javascript, you'll refer to ID to tell a function which element to change.-->
 
 <!-- This is where you have multiple similar elements using the class-->
-<h2 class="rinaClass">Matcha</h2>
-<p>Nana's Green Tea Cafe is her current favorite.</p>
-<h2 class="rinaClass">Korean Fried Chicken (KFC)</h2>
-<p>Von's Chicken in Federal Way is her go to</p>
-<h2 class="rinaClass">The Office</h2>
-<p>Current favorite quotes</p>
-
+<div>
+  <h2 class="rinaClass">Matcha</h2>
+    <p>Nana's Green Tea Cafe is her current favorite.</p>
+  <h2 class="rinaClass">Korean Fried Chicken (KFC)</h2>
+    <p>Von's Chicken in Federal Way is her go to</p>
+  <h2 class="rinaClass">The Office</h2>
+  <p>Current favorite quotes</p>
+</div>
 
 <!--Applying manipulation to images to each one-->
 <!--INSTR: The interesting thing here is that the class column specifies a width of 33.3% but the inline styles applied to these <div> tags override that so that they're 100%. I don't know if this was intentional, and I'm not sure if you meant for there to be four columns with images in them so that you'd get four images side-by-side?-->
