--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 
 <!-- This is where Rina's work starts. :) -->
 <hr>
-<div>
+<div class="container text-white" style="margin-top:70px">
   <!-- Headings -->
   <h1>RINA'S FIRST HEADING</h1>
     <p>woah so dramatic, let's tone it down with the next one</p>
@@ -686,7 +686,7 @@ But, I'm sentimental. So, I'm keeping it in here.-->
   <h2 class="rinaClass">Korean Fried Chicken (KFC)</h2>
     <p>Von's Chicken in Federal Way is her go to</p>
   <h2 class="rinaClass">The Office</h2>
-  <p>Current favorite quotes</p>
+    <p>Current favorite quotes</p>
 </div>
 
 <!--Applying manipulation to images to each one-->
