--- a/index.html
+++ b/index.html
@@ -64,25 +64,34 @@ h2.intro:hover {
     <!--Took this class from Mark's sample page, because I liked it!-->
 <nav class="pl-md-5 navbar navbar-expand-md bg-dark navbar-dark fixed-top">
     <!-- Nina: Bootstrap - Little Title Heading! Wow!!! -->
-    <a class="navbar-brand" href="https://lycheefuzz.github.io/">Team 8's Bootstrap page!</a>
+    <a class="navbar-brand" href="https://lycheefuzz.github.io/">Team 8's Bootstrap Page</a>
 
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
         <!--Nina: added a link to the navigation bar!-->
-        <a class="nav-link" href="https://youtu.be/zMtj4yJKuzk">a smooch    !</a>
+        <a class="nav-link" href="https://youtu.be/zMtj4yJKuzk"> MEMBERS:</a>
       </li>
+
       <!--Nina: Empty Link -- Feel free to add
-      Trevor: added a link to our nav bar(: ) -->
+      Trevor: added a link to our nav bar(: ) 
+      Rina: Added our member's Github to each one!-->
       <li class="nav-item">
-        <a class="nav-link" href="https://www.youtube.com/watch?v=BW1aX0IbZOE">okay (:</a>
+        <a class="nav-link" href="https://github.com/TrevorWindsor/TrevorWindsor.github.io">Trevor</a>
       </li>
         <!--Nina: Empty Link -- Feel free to add -->
       <li class="nav-item">
-        <a class="nav-link" href="#">Link 3</a>
+        <a class="nav-link" href="https://github.com/Asajia00/asajia00.github.io">Xinyu</a>
+      </li>
+            <!--Nina: Empty Link -- Feel free to add
+      Trevor: added a link to our nav bar(: ) -->
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/rinaru13/rina.github.io">Rina</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/lycheefuzz/lycheefuzz.github.io">Nina</a>
       </li>
     </ul>
-  
   </nav>
 
 <!-- This is where Trevor's work starts. :) -->
