--- a/index.html
+++ b/index.html
@@ -532,6 +532,12 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 
 <h2 class="Season">Spring</h2>    
 <p>Spring is warm ♨️.</p>  
+ 
+ <!--Bootstrap:button-->
+<button type="button" class="btn btn-primary btn-lg">Hi</button>
+<button type="button" class="btn btn-primary">Look</button>
+<button type="button" class="btn btn-primary btn-sm">At</button>
+<button type="button" class="btn btn-primary btn-xs">Here</button>
     
     
 
