--- a/index.html
+++ b/index.html
@@ -437,6 +437,10 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 
 <h1 style="background-color:DodgerBlue;">My second heading</h1>
 
+<!--Box-->
+ <div class="row">
+ <div class="col">
+
 <!--paragraph-->
 
 <p>Hi,I am Xinyu, but you can call me Asa</p>
@@ -533,13 +537,23 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 <h2 class="Season">Spring</h2>    
 <p>Spring is warm ♨️.</p>  
  
+ <!--img-->
+ <img src="pictures/seasons.png" alt ="Seasons" width="300">
+<br>
  <!--Bootstrap:button-->
-
-<a href="https://youtu.be/C_Z_U5JJh3I" button type="button" class="btn btn-primary btn-lg">Hi</button></a>
-<button type="button" class="btn btn-primary">Look</button>
+<href="https://youtu.be/C_Z_U5JJh3I" button type="button" class="btn btn-warning">Hi</button>
+<href="https://youtu.be/6kqZqdWNYpM" button type="button" class="btn btn-info">Look</button>
 <button type="button" class="btn btn-primary btn-sm">At</button>
 <button type="button" class="btn btn-primary btn-xs">Here</button>
+<br> 
+<!--Grid-->
+ <div class="row">
+  <div class="col-sm-4">.Do</div>
+  <div class="col-sm-4">.You</div>
+  <div class="col-sm-4">.Like it?/div>
+</div> 
     
+ 
     
 
    
