--- a/index.html
+++ b/index.html
@@ -436,10 +436,7 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 <h1 style="color:Tomato;">Xinyu First Heading</h1>
 
 <h1 style="background-color:DodgerBlue;">My second heading</h1>
-
-<!--Box-->
  
-
 <!--paragraph-->
 
 <p>Hi,I am Xinyu, but you can call me Asa</p>
@@ -547,7 +544,7 @@ But, I'm sentimental. So, I'm keeping it in here.-->
      
   
 <!--Added a link and <a>-->
-<a href="https://www.instagram.com/asa.jia/?hl=en" button type="button" class="btn btn-warning> This is my Instagram.</a>
+<a href="https://www.instagram.com/asa.jia/?hl=en"> This is my Instagram.</a>
 
 <!--This is where Xinyu's work ends. :)-->
 
