--- a/index.html
+++ b/index.html
@@ -532,6 +532,17 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 
 <h2 class="Season">Spring</h2>    
 <p>Spring is warm ♨️.</p>  
+
+<!--Box-->
+ <div class="row">
+ <div class="col">
+<!--Grid--> 
+ <div class="row">
+  <div class="col-sm-4">Carton</div>
+  <div class="col-sm-4">Film</div>
+  <div class="col-sm-4">Funny</div>
+</div>
+ 
  
  <!--img-->
  <img src="pictures/seasons.png" alt ="Seasons" width="300">
@@ -539,7 +550,7 @@ But, I'm sentimental. So, I'm keeping it in here.-->
   
 <!--Added a link and <a>-->
 <a href="https://www.instagram.com/asa.jia/?hl=en"> This is my Instagram.</a>
-
+  </div>
 <!--This is where Xinyu's work ends. :)-->
 
 
