--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 <h3 class="XinyuClass">I like summer </h3> 
 <style>
 .Season {
-  background-color: cyan;
+  background-color: orange;
   color: tomato;
   padding: 10px;
 } 
@@ -533,20 +533,30 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 <h2 class="Season">Spring</h2>    
 <p>Spring is warm ♨️.</p>  
 
-
+ <!--img-->
+ <img src="pictures/seasons.png" alt ="Seasons" width="300">
+ 
 <!--Grid--> 
  <div class="row">
   <div class="col-sm-4">Carton</div>
   <div class="col-sm-4">Film</div>
   <div class="col-sm-4">Funny</div>
 </div>
+ <div class="d-flex">
+  <div class="p-2 bg-info flex-fill">Flex item 1</div>
+  <div class="p-2 bg-warning flex-fill">Flex item 2</div>
+  <div class="p-2 bg-primary flex-fill">Flex item 3</div>
+</div>
+ <href="https://youtu.be/6kqZqdWNYpM" button type="button" class="btn btn-warning">Check This Out</button>
  
- <!--img-->
- <img src="pictures/seasons.png" alt ="Seasons" width="300">
+
 
   
 <!--Added a link and <a>-->
-<a href="https://www.instagram.com/asa.jia/?hl=en"> This is my Instagram.</a>
+<div>
+ <br>
+ <a href="https://www.instagram.com/asa.jia/?hl=en"> This is my Instagram.</a>
+ </div>
 
 <!--This is where Xinyu's work ends. :)-->
 
