--- a/index.html
+++ b/index.html
@@ -432,6 +432,8 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 
 <!--This is where Xinyu's work starts. :)-->
 
+ <div class="row">
+  <div class="col">
 <!--headings-->
 <h1 style="color:Tomato;">Xinyu First Heading</h1>
 
@@ -483,7 +485,8 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 <!--img-->
  <img src="pictures/iStock-155097702-1030x684.jpg" alt ="chocolet" width="300">
 
-
+ </div>
+  </div>
 
 
 <!--strong-->
@@ -536,27 +539,27 @@ But, I'm sentimental. So, I'm keeping it in here.-->
  <!--img-->
  <img src="pictures/seasons.png" alt ="Seasons" width="300">
  
-<!--Grid--> 
+<!--Bootstrap Grid--> 
  <div class="row">
   <div class="col-sm-4">Carton</div>
   <div class="col-sm-4">Film</div>
   <div class="col-sm-4">Funny</div>
 </div>
+ <!--Bootstrap Flexbox-->
  <div class="d-flex">
-  <div class="p-2 bg-info flex-fill">Flex item 1</div>
-  <div class="p-2 bg-warning flex-fill">Flex item 2</div>
-  <div class="p-2 bg-primary flex-fill">Flex item 3</div>
+  <div class="p-2 bg-info flex-fill">Shin Chan</div>
+  <div class="p-2 bg-warning flex-fill">Shin Chan</div>
+  <div class="p-2 bg-primary flex-fill">Shin Chan 3</div>
 </div>
- <href="https://youtu.be/6kqZqdWNYpM" button type="button" class="btn btn-warning">Check This Out</button>
- 
+  <a href="https://youtu.be/6kqZqdWNYpM" class="btn btn-warning" role="button">Check This Out</a>
 
 
   
 <!--Added a link and <a>-->
-<div>
- <br>
+
+
  <a href="https://www.instagram.com/asa.jia/?hl=en"> This is my Instagram.</a>
- </div>
+
 
 <!--This is where Xinyu's work ends. :)-->
 
