--- a/index.html
+++ b/index.html
@@ -488,14 +488,17 @@ But, I'm sentimental. So, I'm keeping it in here.-->
  </div>
   </div>
 
-
+<div class="row">
+  <div class="col">
 <!--strong-->
 
     <strong>Have a good day!</strong>
     
-
+ </div>
+  </div>
 <!--Xinyu CSS Part starts here-->
-   
+<div class="row">
+  <div class="col">   
 <br><h3>Xinyu CSS part starts here</h3>
  
 <!--style in head-->    
@@ -539,6 +542,8 @@ But, I'm sentimental. So, I'm keeping it in here.-->
  <!--img-->
  <img src="pictures/seasons.png" alt ="Seasons" width="300">
  
+ </div>
+  </div>
 <!--Bootstrap Grid--> 
  <div class="row">
   <div class="col-sm-4">Carton</div>
@@ -549,18 +554,20 @@ But, I'm sentimental. So, I'm keeping it in here.-->
  <div class="d-flex">
   <div class="p-2 bg-info flex-fill">Shin Chan</div>
   <div class="p-2 bg-warning flex-fill">Shin Chan</div>
-  <div class="p-2 bg-primary flex-fill">Shin Chan 3</div>
+  <div class="p-2 bg-primary flex-fill">Shin Chan </div>
 </div>
-  <a href="https://youtu.be/6kqZqdWNYpM" class="btn btn-warning" role="button">Check This Out</a>
+ <br> <a href="https://youtu.be/6kqZqdWNYpM" class="btn btn-warning" role="button">Check This Out</a>
 
 
   
 <!--Added a link and <a>-->
 
-
+<div class="row">
+  <div class="col">   
  <a href="https://www.instagram.com/asa.jia/?hl=en"> This is my Instagram.</a>
 
-
+ </div>
+  </div>
 <!--This is where Xinyu's work ends. :)-->
 
 
