Mark's comments. mostly typos, but also fix some stuff from last time!

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@ h2.intro:hover {
 <!-- This is where Trevor's work starts. :) -->
 <!-- Trevor: adding my grids(:-->
 <div class="container">
-  <div class="row">
+  <!--INSTR: I added the margin-top property to this row since it was being covered up by the floating navbar.-->
+  <div class="row" style="margin-top: 200px;">
     <div class="col">
       small boy
     </div>
@@ -128,6 +129,7 @@ h2.intro:hover {
 Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
 <div class="container">
 <h1>My First Heading</h1>
+<!--INSTR: Did you mean to nest grid containers in each other like this or is there a missing </div>? Please indent nested code to make this easier to read.-->
 <div class="container">
   <div class="row">
     <div class="col">
@@ -153,6 +155,7 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
     <p>and This is a red paragraph.</p>
   </div>
   <!--span-->
+  <!--INSTR: Because of the background image, this text becomes unreadable.-->
   <p>My mother has <span style="color:blue">blue</span> eyes.</p>
   <!--strong-->
  <p><strong>buff text</strong></p>
@@ -259,6 +262,7 @@ Trevor added class tag 'intro' to h2 as well as adding id tag to p -->
 
     </div>
 </div>
+<!--ISNTR: We need to work on consistent indenting!-->
 
     <!--HTML: Added <table> :: about ...rad..ness? idk. -->
         <div class="row">
@@ -603,6 +607,7 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 
     <!-- Add <div> and color to the box-->
         <!--INSTR: Don't forget to put "quote" marks around attribute values!-->
+        <!--INSTR: [New comment] I expect you to read my comments and fix these things!-->
     <div style=background-color:black>
       <h3 style = "color:white"> Rina's fourth heading</h3>
         <p> yay! you can prolly see it now!</p>
@@ -685,6 +690,7 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 </head> -->
 
 <!--That's correct. BUT ALSO, there should only be ONE <body> tag as well... so delete this extra one below.-->
+  <!--INSTR: Delete the extra body tag.-->
 
     <body>
     <h6>This is the 6th Heading. 
